Release history for Path-FindDev

{{$NEXT}}

0.5.2 2014-08-16T04:12:22Z
 [00 Trivial]
 - CPANDAY!
 - No code changes.
 - metadata updated.
 - tests updated.
 - whitespace reduced.

 [Dependencies::Noteworthy]
 - use newer Path::Tiny to avoid bug GH #7 ( Thanks Chorny )

 [Dependencies::Stats]
 - Dependencies changed since 0.5.1, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - runtime: ↑1
 - test: +1 -3 (recommends: ↑1 -1)

 [Metadata]
 - move to kentnl org.
 - Show 2x contributors

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - updated Test::ReportPrereqs

0.5.1 2014-07-13T17:54:11Z
 [00 Trivial]
 - Misc packaging updates.

 [Dependencies::Stats]
 - Dependencies changed since 0.5.0, see misc/*.deps* for details
 - configure: (recommends: ↑1)
 - develop: +3 -3 (suggests: +2 -1)
 - test: (recommends: ↑2)

0.5.0 2014-03-04T11:03:22Z
 [00 Tooling release]
 - Toolkit switched to EUMM
 - No other noteworthy changes
 - Still as broken as always

 [Dependencies::Aggregate]
 - 5.008 - 49 → 44
 - 5.010 - 32 → 33
 - 5.019 - 18 → 17

 [Dependencies::Stats]
 - Dependencies changed since 0.4.2, see misc/*.deps* for details
 - build: -1
 - configure: +1 -1 (recommends: +1)
 - develop: +8 ↑1 -10
 - runtime: +1 ↑1
 - test: +4 ↓1 -3 (recommends: +4)

0.4.2 2013-11-09T16:06:27Z
 [00 Bugfix]
 - Minimum perl declared is now 5.8, and tested to work on 5.8
 - However, the version scheme is x.y.z still, which means if you want to depend on a specific version in Perl code,
   you'll need a recent enough version.pm to make it work.

 [Dependencies::Stats]
 - Dependencies changed since 0.4.1, see misc/*.deps* for details
 - build: ↑1
 - configure: ↑1
 - develop: +42 ↑1
 - runtime: ↓1
 - test: ↑1

0.4.1 2013-10-23T19:08:22Z
 [00 Bugfix]
 - System path test added in 0.4.0 disabled due to potential security risks ( fixes #4 )

 [Dependencies::Stats]
 - Dependencies changed since 0.4.0, see misc/*.deps* for details
 - develop: ↑2