@@ -4,7 +4,7 @@ Path::FindDev - Find a development path somewhere in an upper hierarchy.
 
 # VERSION
 
-version 0.5.3
+version v0.5.3
 
 # DESCRIPTION
 
@@ -79,11 +79,11 @@ of what `$CWD` happens to be when you call it.
 
 # AUTHOR
 
-Kent Fredric <kentfredric@gmail.com>
+Kent Fredric <kentnl@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2014 by Kent Fredric <kentfredric@gmail.com>.
+This software is copyright (c) 2017 by Kent Fredric <kentfredric@gmail.com>.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
