@@ -1,6 +1,7 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.7.4 at Sun Jul  7 01:17:11 2013
+; vim: syntax=dosini
 name             = Path-FindDev
-author           = Kent Fredric <kentfredric@gmail.com>
+author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
@@ -9,8 +10,7 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 [@Author::KENTNL]
 :version          = 2.016
-git_versions      = 1
-normal_form       = normal_3
+normal_form       = normal
 toolkit           = eumm
 toolkit_hardness  = soft
 bumpversions      = 1
@@ -24,7 +24,7 @@ srcreadme         = mkdn
 ; version_rel_day   = 7
 ; version_rel_hour  = 1
 ; version_rel_time_zone = Pacific/Auckland
-twitter_hash_tags = #perl #cpan
+; twitter_extra_hash_tags =
 ; auto_prereqs_skip = File::Find
 
 [Prereqs / RuntimeRequires]
