@@ -1,6 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.5.3
+ [Added / configure requires]
+ - perl 5.008
+
+ [Added / test requires]
+ - perl 5.008
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 0.5.2 2014-08-16T04:12:22Z
  [Added / test requires]
@@ -111,4 +119,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
 
  [Changed / runtime requires]
  - Path::IsDev v0.1.1 → v0.2.2
-
