@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.5.3
+ [Added / runtime recommends]
+ - Path::Tiny 0.058
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001003 → 0.99
 
 0.5.2 2014-08-16T04:12:22Z
  [Changed / test recommends]
@@ -40,4 +49,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
 0.3.0 2013-09-18T03:06:21Z
 
 0.2.0 2013-07-07T16:36:18Z
-
